--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
